[gd_scene load_steps=2 format=3 uid="uid://dpl1qldotqs2u"]

[ext_resource type="Script" path="res://World/UISavePanel.gd" id="1_jqn5v"]

[node name="UISavePanel" type="Panel"]
anchors_preset = -1
anchor_right = 0.003125
anchor_bottom = 0.0277778
offset_left = 4.0
offset_top = 5.0
offset_right = 73.0
offset_bottom = 27.0
script = ExtResource("1_jqn5v")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = 3.0
offset_right = 106.0
offset_bottom = 24.0

[node name="SaveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Save"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Load"

[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
